--- a/css/_chat.scss
+++ b/css/_chat.scss
@@ -22,7 +22,8 @@
      * Make the sidebar flush with the top of the toolbar. Take the size of
      * the toolbar and subtract from 100%.
      */
-    height: calc(100% - #{$newToolbarSizeWithPadding});
+    // height: calc(100% - #{$newToolbarSizeWithPadding});
+    height: 100%;
     left: -$sidebarWidth;
     overflow: hidden;
     position: absolute;
