--- a/css/_videolayout_default.scss
+++ b/css/_videolayout_default.scss
@@ -237,6 +237,9 @@
 #largeVideo,
 #largeVideoWrapper
 {
+    width: unset !important;
+    height: unset !important;
+    inset: unset !important;
     object-fit: cover;
 }
 
